# Chord-Game-Engine

./: .gitignore  CMakeLists.txt  README.md  build.bat
assets/: quad.glb  tetrahedron.glb
shaders/: batch_color_mesh.vert  colored_triangle.frag  colored_triangle.vert  colored_triangle_mesh.vert  gradient.comp  gradient_color.comp  mesh.frag  mesh.vert  sky.comp  snake.comp  tex_image.frag
src/editor/: CMakeLists.txt  Editor.cpp
src/engine/: CMakeLists.txt  Camera.h  CameraSystem.cpp  CameraSystem.h  Component.h  Core.cpp  Core.h  Ecs.h  EcsDebugger.cpp  EcsDebugger.h  InputSystem.cpp  InputSystem.h  Log.h  MeshComponent.h  PhysicsBody.cpp  PhysicsBody.h  Renderer.cpp  Renderer.h  RenderingSystem.cpp  Simulation.cpp  Simulation.h  Slotmap.h  System.h  Transform.h  VkImages.h  VkInit.h  VulkanDevice.cpp  VulkanDevice.h  WindowGLFW.cpp  WindowGLFW.h  vk_descriptors.cpp  vk_pipelines.cpp  vk_pipelines.h  vk_types.h
src/simulation/: CMakeLists.txt  Simulation.cpp  Simulation.h
